# GPUFabric

./: .dockerignore  .gitignore  BUILD_SUCCESS_SUMMARY.md  Cargo.toml  README.md  build-android.ps1  deny.toml
.cargo/: config.toml.backup  config.toml.backup2
.github/workflows/: security.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/config/: id_to_tflops.json  mod.rs  model_to_id.json
docker/: Dockerfile.runtime  gpuf_s_compose.yaml  gpuf_s_test.env.example  gpuf_s_test_compose.yaml  kafka_compose.yaml
docs/: README_CN.md  api_server.md  gpu-device-multiplier-proposal.md  gpuf-c.md  gpuf-s-test-environment-runbook.md  gpuf-s.md  heartbeat_consumer.md  security-release-report.md
docs/mobile-sdk/: BUILD_GUIDE.md  INTEGRATION_GUIDE_EN.md  IOS_APP_INTEGRATION_CN.md  IOS_SDK_REGRESSION_REPORT_2026-06-10.md  IOS_TEST_ENV_PARAMS.md  README.md
gpuf-c/: Cargo.toml  Cargo.toml.x86_64_compat  README.md  SECURITY_REMEDIATION_PLAN.md  build.rs  build_x86_64_with_android.sh  cbindgen.toml  compile_android.sh  generate_ios_sdk.sh  generate_sdk.sh  gpuf_c.h  gpuf_c_ios.h  gpuf_c_minimal.h  install.sh  install_client.ps1  install_client.sh  run_test.sh  test_compat_x86_64.c
gpuf-c/.cargo/: config.toml
gpuf-c/build_android/: android_test  gpuf_c_minimal.h
gpuf-c/build_ios/package/GPUFabric-iOS-SDK/: IOS_INTEGRATION.md
gpuf-c/build_ios/package/GPUFabric-iOS-SDK/gpuf_c_sdk.xcframework/ios-arm64-simulator/Headers/: gpuf_c_minimal.h
gpuf-c/docs/: ANDROID_BUILD_LESSONS_LEARNED.md  ANDROID_JNI_NETWORK_BUILD_GUIDE.md  ANDROID_X86_64_DEPLOYMENT_GUIDE.md  BUILD_GUIDE.md  COMPUTE_SHARING_DIAGRAMS.md  DOCUMENTATION_INDEX.md  INFERENCE_SERVICE_ARCHITECTURE.md  IOS_SDK_INTEGRATION.md  JNI_RemoteWorker_API_CN.md  MODEL_MANAGEMENT_GUIDE.md  MODEL_STATUS_EXAMPLES.md  MULTIMODAL_IMPLEMENTATION_GUIDE.md  MULTIMODAL_TESTING.md  OFFLINE_MODE_GUIDE.md  PROJECT_STATUS_SUMMARY.md  QUICK_START.md  README.md  RemoteWorker_Architecture.mmd  RemoteWorker_CallFlow.mmd  RemoteWorker_DetailedFlow.mmd  STREAMING_API_GUIDE.md  WINDOWS_BUILD.md
gpuf-c/docs/api/: API_REFERENCE.md
gpuf-c/docs/mobile/: ANDROID_DEVELOPMENT_GUIDE.md  MOBILE_SDK_CHECKLIST.md
gpuf-c/docs/platform/: AMD_GPU_ROCM_SUPPORT.md  GPU_METRICS_IMPROVEMENT.md
gpuf-c/examples/: README.md  README_MULTIMODAL_TEST.md  android_test.c  build_and_test_multimodal.sh  inference_client.rs  llama_api_server.rs  llama_usage.rs  p2p_sdk_client.rs  performance_test.rs  quick_multimodal_test.sh  test_async_real.c  test_multimodal_minimal.c  test_multimodal_streaming.c
gpuf-c/examples/android/: Android.mk  Application.mk  GPUFabricClientExample.java  GPUFabricClientSDK.java  android_inference_test.c  android_inference_test_optimized.c
gpuf-c/examples/device_info/: test_device_info_collection.rs
gpuf-c/examples/ios_sim_test/: run_ios_sim_test.sh  run_ios_sim_tls_test.sh
gpuf-c/examples/ios_sim_test/GPUFIosSimTest/: ContentView.swift  GPufBridge.h
gpuf-c/examples/mobile/: test_android_device_info.rs
gpuf-c/examples/platform_testing/: test_cross_platform_vulkan.rs  test_rocm_gpu_metrics.rs  test_vulkan_device.rs
gpuf-c/examples/rust/: test_client_sdk.rs
gpuf-c/scripts/: README.md  build_arm64_with_android.sh  build_mobile.ps1  setup_ndk.ps1  test_android.ps1  test_android_inference.sh  verify_client_sdk.ps1
gpuf-c/src/: client_sdk.rs  jni_llama.rs  jni_remote_worker.rs  lib.rs  lib_compat_x86_64.rs  lib_real_android.rs  llama_wrapper.rs  main.rs
gpuf-c/src/config/: config.toml
gpuf-c/src/handle/: android_sdk.rs  handle_tcp.rs  handle_udp.rs  handle_ws.rs  mod.rs  worker_sdk.rs
gpuf-c/src/llm_engine/: anthropic_server.rs  inference_service.rs  llama_engine.rs  llama_server.rs  mod.rs  ollama_engine.rs  vllm_engine.rs
gpuf-c/src/util/: asm.rs  cmd.rs  config.rs  device_info.rs  mobile_control_stream.rs  mobile_tls_policy.rs  mod.rs  model_downloader.rs  model_downloader_example.rs  network_info.rs  nvswitch_check.rs  safe_command.rs  security_metrics.rs  system_info.rs  system_info_vulkan.rs
gpuf-s/: Cargo.toml
gpuf-s/.cargo/: config.toml
gpuf-s/api/: api_server.md
gpuf-s/src/: lib.rs  main.rs
gpuf-s/src/api_server/: README.md  apk.rs  client.rs  handle_api.rs  mod.rs  models.rs  points.rs
gpuf-s/src/consumer/: heartbeat_consumer.rs  heartbeat_processor.rs  mod.rs
gpuf-s/src/db/: apk.rs  client.rs  mod.rs  models.rs  stats.rs
gpuf-s/src/handle/: handle_agent.rs  handle_connections.rs  mod.rs
gpuf-s/src/inference/: gateway.rs  handlers.rs  mod.rs  scheduler.rs
gpuf-s/src/points_sync/: mod.rs
gpuf-s/src/util/: cmd.rs  db.rs  mod.rs  msg.rs  pack.rs  protoc.rs
gpuf-s/src/xdp/: README.md  mod.rs  xdp_filter.rs
gui/: doc.md
scripts/: apple_m_devices.sql  create_cert.sh  create_mobile_tls_cert.sh  db.sql  device_points_daily_incremental.sql  gpuf_s_test_seed.sh  mobile_sdk_release_gate.sh  security_release_evidence.sh  update_device_tflops.sql
security-release-evidence/mobile-sdk/: README.md  mobile-evidence-status.txt  mobile-release-context.txt  mobile-sdk-symbols.txt  mobile-source-sensitive-grep.txt  mobile-toolchain-status.txt
security-release-evidence/mobile-sdk/evidence/: android-instrumentation.txt  android-keystore-review.txt  android-target-compile.txt  asan-tsan.txt  ios-keychain-review.txt  ios-simulator-device.txt  ios-target-compile.txt  mobile-control-tls-pinning.txt  permissions-logging-audit.txt
