[workspace]
members = [
    "gpuf-s",
    "gpuf-c",
    "common",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["full", "sync","io-util","signal"] }
rustls-pemfile = "2.2.0"
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
clap = { version = "4", features = ["derive","env"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4"

[profile.release]
# Aggressive optimization for minimal size
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Maximum optimization
strip = true        # Remove debug symbols
panic = "abort"     # Reduce panic handling code
overflow-checks = false # Remove overflow checks
debug-assertions = false

[profile.dev]
debug = true  
opt-level = 0

[profile.release.package.gpuf-c]
# For Android, do not strip symbols to preserve JNI exports



codegen-units = 1

