
[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
lazy_static = "1.4.0"
serde_derive = "1.0"
zeroize = "1"
