[package]
name = "gpuf-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpuf_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "gpuf-c"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
anyhow = { workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1.54"
plist = "1.7.4"
rand = "0.9.2"
nvml-wrapper = "0.11.0"
serde_json = "1"
futures-util = "0.3"
bytes = "1"
hex = { workspace = true }
tokio-tungstenite = "0.28.0"
url = "2.5.0"
serde_yaml = "0.9.34-deprecated"
dirs = "6.0.0"
toml = "0.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
# llama.cpp 集成（Android 平台暂不支持，编译有兼容性问题）
# llama-cpp-2 = { version = "0.1.74", default-features = false }
once_cell = "1.19"      # 全局单例
sysinfo = "0.37.0"

[features]
default = []
# CUDA 支持（NVIDIA GPU - 非 Android 平台）
cuda = []
# Metal 支持（Apple GPU - iOS/macOS）
metal = []
# Vulkan 支持（跨平台 GPU）
vulkan = []
# CPU only
cpu = []

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper = { version = "0.11.0" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"
sysinfo = { version = "0.37.0", default-features = false, features = ["system", "disk"] }

[target.'cfg(target_os = "macos")'.dependencies]
acpi = "6.0.1"  
raw-cpuid = "11.6.0"  
regex = "1.7.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
cbindgen = "0.26"

[target.aarch64-linux-android]
rustflags = ["-Clink-arg=-Wl,--icf=safe"]