[package]
name = "gpuf-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpuf_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "gpuf-c"
path = "src/main.rs"

[[bin]]
name = "model_download"
path = "src/bin/model_download.rs"

[[bin]]
name = "validate_gguf"
path = "src/bin/validate_gguf.rs"

[[bin]]
name = "download_and_validate"
path = "src/bin/download_and_validate.rs"

[[example]]
name = "test_vulkan_device"
path = "examples/test_vulkan_device.rs"

[[example]]
name = "test_cross_platform_vulkan"
path = "examples/test_cross_platform_vulkan.rs"

[[example]]
name = "test_android_device_info"
path = "examples/test_android_device_info.rs"

[[example]]
name = "test_client_sdk"
path = "examples/rust/test_client_sdk.rs"

[dependencies]
# Core dependencies
common = { path = "../common" }
tokio = { workspace = true, default-features = false, features = ["rt", "net", "sync"] }
anyhow = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
toml = "0.7"
dirs = "6.0.0"
serde_yaml = "0.9.34-deprecated"
sysinfo = "0.37.0"

# Common dependencies for all platforms
log = "0.4"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-rustls = { workspace = true }

# Optional Vulkan dependencies
ash = { version = "0.37", optional = true }
rustls-pemfile = { workspace = true }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls", "connect", "stream"] }
url = "2.5.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = { version = "1", default-features = false }
axum = { version = "0.7", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"

# Platform-specific dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
llama-cpp-2 = "0.1.125"
once_cell = "1.19"
chrono = "0.4.38"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nvml-wrapper = { version = "0.4.0", optional = true }
rocm_smi_lib = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.1"
nvml-wrapper = { version = "0.4.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
acpi = "6.0.1"  
raw-cpuid = "11.6"  
regex = "1.7.1"
plist = "1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
once_cell = "1.19"

[features]
default = ["cpu"]

# CPU only
cpu = ["llama-cpp-2/native"]

# CUDA support (NVIDIA GPU)
cuda = ["llama-cpp-2/cuda","nvml-wrapper"]

# Metal support (Apple GPU - iOS/macOS)
metal = ["llama-cpp-2/metal"]

# Android features (Vulkan support)
android = ["llama-cpp-2/vulkan"]

# Vulkan support (cross-platform GPU)
vulkan = ["llama-cpp-2/vulkan", "ash"]

# NVML feature for GPU monitoring
nvml = ["nvml-wrapper"]

# ROCm feature for AMD GPU monitoring
rocm = ["rocm_smi_lib"]

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
cbindgen = "0.26"

[target.aarch64-linux-android]
rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]

[target.x86_64-linux-android]
rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]

[target.armv7-linux-androideabi]
rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]

[target.i686-linux-android]
rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]

[profile.release]
# Aggressive optimization for minimal size
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Maximum optimization
strip = true        # Remove debug symbols
panic = "abort"     # Reduce panic handling code
overflow-checks = false # Remove overflow checks

[profile.release.package.gpuf-c]
# Strip symbols but preserve JNI exports
strip = "debuginfo"
