[package]
name = "gpuf-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpuf_c"
crate-type = ["rlib"]

[[bin]]
name = "gpuf-c"
path = "src/main.rs"

[dependencies]
# Core dependencies
common = { path = "../common" }
tokio = { workspace = true, default-features = false, features = ["rt", "net", "sync"] }
anyhow = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.1", features = ["serde"] }
tokio-rustls = { version = "0.26.2",default-features = false, features = ["ring"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
toml = "0.7"
dirs = "6.0.0"
serde_yaml = "0.9.34-deprecated"
sysinfo = "0.37.0"
axum = { version = "0.7", features = ["json"] }
uuid = "1.18.0"
libc = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
sha2 = "0.10"
# Common dependencies for all platforms
log = "0.4"
bytes = { version = "1", default-features = false }
rustls-pemfile = { workspace = true }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["native-tls-vendored", "connect", "stream"] }
url = "2.5.0"
tokio-stream = { version = "0.1", default-features = false }
hmac = "0.12"
sha1 = "0.10"
md5 = "0.7"
crc32fast = "1.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "native-tls-vendored", "stream"] }
tokio-rustls = { version = "0.26.2",default-features = false, features = ["ring"] }
llama-cpp-2 = { version = "0.1.125", default-features = false }
once_cell = "1.19"
chrono = "0.4.38"
ash = { version = "0.37", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "native-tls-vendored"] }
android_logger = "0.13"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
once_cell = "1.19"
jni = "0.21"
tokio-native-tls = "0.3"

# Optional Vulkan dependencies
vulkan-sys = { version = "0.1.1", optional = true }

uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nvml-wrapper = { version = "0.4.0", optional = true }
rocm_smi_lib = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.1"
nvml-wrapper = { version = "0.4.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
acpi = "6.0.1"  
raw-cpuid = "11.6"  
regex = "1.7.1"
plist = "1"
rand = "0.9"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[features]
default = ["cpu"]

# CPU only
cpu = ["llama-cpp-2/native"]

# CUDA support (NVIDIA GPU)
cuda = ["llama-cpp-2/cuda","nvml-wrapper"]

# Metal support (Apple GPU - iOS/macOS)
metal = ["llama-cpp-2/metal"]

# Android features (Vulkan support)
android = ["llama-cpp-2/vulkan"]

# Vulkan support (cross-platform GPU)
vulkan = ["llama-cpp-2/vulkan", "ash"]

# NVML feature for GPU monitoring
nvml = ["nvml-wrapper"]

# ROCm feature for AMD GPU monitoring
rocm = ["rocm_smi_lib"]

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
cbindgen = "0.26"
embed-resource = "2.4"
tar = "0.4"
